# trade-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.codex/prompts/: 00_bootstrap.md  01_exchange.md  02_risk_position.md  03_strategy.md  04_paper_runner.md  05_backtest_metrics.md  06_ci_nightly_issues.md  07_live_trading.md  08_optimize_params.md  09_refactor_signals.md  10_additional_pairs.md
.github/ISSUE_TEMPLATE/: backtest_regression.md
.github/workflows/: ci.yml  nightly.yml
config/: config.example.yaml  pairs.yaml
notebooks/: exploration.ipynb
src/bot/: __init__.py  backtest.py  ci_regression.py  config.py  exchange.py  logger.py  metrics.py  notifier.py  optimize.py  paper.py  position.py  risk.py  runner.py  strategy.py
tests/: test_backtest_metrics.py  test_config.py  test_exchange.py  test_live_runner.py  test_live_watcher.py  test_logger.py  test_multi_pairs.py  test_optimize.py  test_paper_runner.py  test_position.py  test_risk.py  test_smoke.py  test_strategy.py  test_strategy_refactor.py
